--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
