--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3'//没有使用特殊Header，可以不加这行
+    compile 'me.xiaopan:sketch:2.4.1'
+    compile 'fm.jiecao:jiecaovideoplayer:3.3'
 }
