--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".neihan.adapter.ShowImageView"></activity>
+        <activity android:name=".neihan.adapter.ShowImageView">
+        </activity>
 
     </application>
 
